--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -742,7 +742,7 @@
         />
         <img
           class="icon-RRSS"
-          (click)="redirectToRRSS('')"
+          (click)="redirectToRRSS('https://www.tiktok.com/@talksmartly.langu')"
           src="../assets/footer/icon-tik.png"
           alt=""
         />
