--- a/src/app/carrusel-2/carrusel-2.component.html
+++ b/src/app/carrusel-2/carrusel-2.component.html
@@ -14,7 +14,7 @@
                 alt=""
               />
               <div>
-                <span>Mónica Delgado</span><br />
+                <span>itta Delgado</span><br />
                 <span>Ingeniera de software</span>
               </div>
             </div>
