telefono para wasap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -240,7 +240,7 @@
           <span
             (click)="
               redirectToWhatsApp(
-                '573105575041',
+                '573145606014',
                 'Hola, quiero más información acerca de los cursos de TalkSmartly'
               )
             "
@@ -270,7 +270,7 @@
           <span
             (click)="
               redirectToWhatsApp(
-                '573105575041',
+                '573145606014',
                 'Hola, quiero más información acerca de los cursos de TalkSmartly'
               )
             "
@@ -299,7 +299,7 @@
           <span
             (click)="
               redirectToWhatsApp(
-                '573105575041',
+                '573145606014',
                 'Hola, quiero más información acerca de los cursos de TalkSmartly'
               )
             "
@@ -334,7 +334,7 @@
       <button
         (click)="
           redirectToWhatsApp(
-            '573105575041',
+            '573145606014',
             'Hola, quiero más información acerca de los cursos de TalkSmartly'
           )
         "
@@ -388,7 +388,7 @@
     <button
       (click)="
         redirectToWhatsApp(
-          '573105575041',
+          '573145606014',
           'Hola, quiero más información acerca de los cursos de TalkSmartly'
         )
       "
@@ -473,7 +473,7 @@
     <button
       (click)="
         redirectToWhatsApp(
-          '573105575041',
+          '573145606014',
           'Hola, quiero más información acerca de los cursos de TalkSmartly'
         )
       "
@@ -526,7 +526,7 @@
     <button
       (click)="
         redirectToWhatsApp(
-          '573105575041',
+          '573145606014',
           'Hola, quiero más información acerca de los cursos de TalkSmartly'
         )
       "
@@ -673,7 +673,7 @@
       style="margin-bottom: 35px"
       (click)="
         redirectToWhatsApp(
-          '573105575041',
+          '573145606014',
           'Hola, quiero más información acerca de los cursos de TalkSmartly'
         )
       "
@@ -712,6 +712,12 @@
       <h4>Contáctanos</h4>
       <div class="container-contact-icons">
         <img
+          (click)="
+            redirectToWhatsApp(
+              '573145606014',
+              'Hola, quiero más información acerca de los cursos de TalkSmartly'
+            )
+          "
           class="icon-RRSS"
           src="../assets/footer/icon-whatsapp.png"
           alt=""
